_sass/default.scss
$ivory: #FFFFF0;
$dark_ivory: #F0E68C;
$light_blue: #E8EEFF;
$link_blue: #565BB1;
$link_hover_blue: #868BF1;
$offwhite: #F8F8F8;
$medium_green: #260;
$dark_green: #204926;
$brown: #8F4B36;

$lato: 'Lato', helvetica, sans-serif;
$baskerville: 'Libre Baskerville', Georgia, serif;
$sharetech: 'Share Tech Mono', Courier, monospace;

@import 'custom-mixins';

body {
  background: url('/imgs/bg-mobile.jpg') no-repeat #000;
  border: none;
  outline: none;
  color: #444;
  font-family: $lato;
  margin: 0;

  header {
    background-color: $link_blue;
    margin: 0;
    padding: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;

    h1 {
      margin: 0;
    }

    nav {
      background-color: transparent;
      position: relative;
      margin: 0;
      padding: 0;

      div {
        background-color: transparent;
        text-align: center;
        border: none;
        padding: 0;
        margin: 0;
        box-sizing: border-box;

        &#home-link,
        &#sandwich-menu {
          display: inline-block;
          height: 3em;
        }
        &#home-link {
          width: 4em;

          &:hover {
            color: #AAE;
          }

          .nav-name {
            display: none;
          }
        }
        &#sandwich-menu {
          background-color: transparent;
          width: 132px;
          position: absolute;
          right: 0;
          top: 0;

          &:before {
            content: 'menu';
            color: #EEE;
            position: absolute;
            width: 100%;
            height: 1em;
            left: 0;
            top: 50%;
            margin-top: -0.75em;
            text-transform: uppercase;
          }

          &:hover,
          &:active {
            background-color: $link_hover_blue;
          }

          #dropdown {
            background-color: $link_blue;
            position: absolute;
            width: 100%;
            left: 0;
            top: -12em;
            z-index: 1;
            @include transition(700ms);

            .dropdown-link {
              padding-left: 12px;
              text-align: left;
            }
          }

          &:hover,
          &:active {
            &:before {
              color: #EEE;
            }

            #dropdown {
              top: 0;
            }
          }
        }

        a.nav-link {
          color: #EEE;
          box-sizing: border-box;
          font-size: 1.25em;
          padding: 0.5em 0;
          height: 100%;
          width: 100%;

          .nav-name {
            font: {
              family: $lato;
              weight: bold;
              size: 0.625em;
            }
            margin-left: 1em;
          }

          &:link {
            font-weight: initial;
            text-decoration: none;
          }
          &:visited {
            color: #EEE;
          }
          &:hover,
          &:visited:hover {
            color: #AAE;
          }
        }
      }
    }
  }

  main {
    background-color: transparent;
    box-sizing: border-box;
    height: 100vh;
    margin: 0;
    overflow-y: auto;
    padding: 40px 0 0;
    position: relative;
    z-index: 0;

    h1, h2, h3, {
      font-family: $baskerville;
    }
    h2 {
      font-size: 20px;
    }
  }

  canvas {
    width: 100%;
  }

  article {
    background: #EEE;
    line-height: 1.4;
    padding: 8px 16px;
    margin: 32px auto;
    width: 80%;
    box-sizing: border-box;
  }

  ol, ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  a {
    color: #444;

    &:link {
      font-weight: bold;
      text-decoration: none;
    }
    &:visited {
      color: #444;
    }
    &:hover,
    &:visited:hover {
      color: #666;
      text-decoration: underline;
    }
  }

  .button {
    background: #FFF;
    border: 1px solid #999;
    border-radius: 4px;
    padding: 4px 8px 3px;
    margin: 0 4px;

    &:hover {
      color: #777;
      text-decoration: none;
    }
  }

  pre {
    background-color: #444;
    color: #EEE;
    font-family: $sharetech;
    font-size: 1em;
    border: 2px inset #000;
    padding: 8px 16px;
    white-space: pre-wrap;
    word-wrap: break-word;
  }

  .code {
    background-color: #CCC;
    color: #222;
    font-family: $sharetech;
    padding: 2px 4px;
  }

  .lsi {
    list-style: initial;

    li {
      border: none;
      margin: 0 1em;
      padding: 0;
    }
  }

  footer {
    background-color: #EEE;
    text-align: center;
    padding: 0.75em 0 0.5em;

    div {
      display: inline-block;
      margin: 0 auto;
    }

    .footer-center {
      max-width: 500px;
    }

    p {
      margin: 0.375em auto;

      &.footer-links {
        color: $link_blue;
        font-size: 1.5em;
        font-weight: bold;
        margin: 0;

        a {
          color: $link_blue;
          vertical-align: middle;

          &:hover,
          &:visited:hover {
            color: $link_hover_blue;
            text-decoration: underline;
          }
          &:visited {
            color: $link_blue;
          }
        }
      }
    }

    .mail-link:hover {
      text-decoration: none;
    }
  }

  .headshot {
    @include border-radius(0 10px);
    border-style: solid;
    border-width: 0.375em 0 0 0.25em;
    margin-top: 0.5em;
    width: 130px;
  }

  .quote-container {
    background-color: #DDD;
    font-family: 'Georgia', serif;
    border: 3px double #222;
    padding: 0 1em;
  }

  .fw-bold { font-weight: bold; }

  #end-message {}
  #console-display {}
  #console-input {
    width: 95%;
  }

  #home-list p {
    font-weight: bold;
  }

  #update-date {
    font-size: 0.625em;
    font-weight: bold;
  }
}

@media screen and (min-width: 600px) {
  body {
    background: {
      image: url("/imgs/bg-desktop.jpg");
      size: cover;
    }

    header {
      nav {
        div {
          display: inline-block;
          text-align: center;
          padding: 0;
          margin: 0;
          height: auto;

          &#home-link {
            width: 20%;
            height: auto;

            .nav-name {
              display: inline-block;
            }
          }
          &#sandwich-menu {
            border: none;
            width: 80%;
            height: auto;

            &:before {
              display: none;
            }

            #dropdown {
              border: none;
              top: 0;

              .dropdown-link {
                text-align: center;
                padding: 0;
                width: 25%;
              }
            }
          }

          &:hover {
            background-color: $link_hover_blue;
          }

          a.nav-link {
            color: #EEE;
            font-size: 1.25em;
            padding: 0.5em 0;
            height: 100%;
            width: 100%;
            box-sizing: border-box;

            .nav-name {
              font: {
                family: $baskerville;
                weight: bold;
                size: 0.625em;
              }
              margin-left: 1em;
            }

            &:link {
              font-weight: initial;
              text-decoration: none;
            }
            &:visited {
              color: #EEE;
            }
            &:hover,
            &:visited:hover {
              color: #EEE;
            }
          }
        }
      }
    }
  }
}

@media screen and (min-width: 800px) {
  body {
    header nav div a.nav-link .nav-name {
      font-size: 0.75em;
    }

    article {
      margin-left: 10%;
      width: 55%;
    }
  }
}

@include keyframes(spin) {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
.spinner {
  background-color: inherit;
  border: 8px solid #333;
  @include border-radius(50%);
  box-sizing: border-box;
  height: 50px;
  width: 50px;
  position: relative;

  &:before {
    @include animation(spin 2s ease infinite);
    background-color: inherit;
    border: 1px solid $light_blue;
    @include border-radius(25px 0 0 25px);
    box-sizing: content-box;
    content: '';
    height: 50px;
    width: 25px;
    top: -9px;
    left: -9px;
    position: absolute;
    transform: translateZ(0);
    transform-origin: 25px;
  }
  &:after {
    @include animation(spin 2s ease infinite 500ms);
    background-color: inherit;
    border: 1px solid $light_blue;
    @include border-radius(0 25px 25px 0);
    box-sizing: content-box;
    content: '';
    height: 50px;
    width: 25px;
    top: -9px;
    right: -9px;
    position: absolute;
    transform: translateZ(0);
    transform-origin: 0;
  }
}

